--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,22 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+      
       # Build
-      - name: Build project
+      - name: Build windows
         uses: game-ci/unity-builder@v2
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
           targetPlatform: StandaloneWindows64
+      
+      # Build
+      - name: Build webgl
+        uses: game-ci/unity-builder@v2
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        with:
+          targetPlatform: WebGL
 
       # Output
       - uses: actions/upload-artifact@v2
