--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: Build
-          path: WindowsStandalone64
+          path: StandaloneWindows64
   
   build-webgl:
     name: Create WebGL build
